adding release variables
Signed-off-by: Sergio Hinojosa <sergio.hinojosa@dynatrace.com>